feat(GMC-52): replaced deprecated Runtime#exec with ProcessBuilder